<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    app:cardElevation="@dimen/cardElevation"
    app:cardCornerRadius="@dimen/cardRadius"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="40dp"
    android:layout_marginTop="100dp"
    android:layout_marginStart="40dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/titleAlertDialog"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/vazir"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/AlertDialogText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/descriptionAlertDialog"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/vazir"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/lorem_ipsum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <View
            android:background="@color/blackLight"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <TextView
            android:id="@+id/doneButtonAlertDialog"
            android:padding="10dp"
            android:textColor="@color/black"
            android:fontFamily="@font/vazir"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>