<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".mainApp.kartable.upsertLetter.view.UpsertLetterFragment">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/contentBlock"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:paddingBottom="20dp"
                    android:id="@+id/letterUpsertContent"
                    android:background="@color/black"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <EditText
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="15dp"
                        android:drawablePadding="10dp"
                        android:drawableRight="@drawable/ic_baseline_subtitles_24"
                        android:id="@+id/usernameLogin"
                        android:textDirection="rtl"
                        android:fontFamily="@font/vazir"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:hint="@string/etterTitle"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:background="@drawable/style_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <androidx.cardview.widget.CardView
                        android:layout_marginBottom="10dp"
                        app:cardCornerRadius="@dimen/radius"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@color/black"
                        app:cardElevation="@dimen/cardElevation"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/style_edit_text"
                            android:orientation="vertical">

                            <androidx.cardview.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:weightSum="1000"
                                app:cardCornerRadius="@dimen/cardRadius"
                                app:cardElevation="0dp">

                                <LinearLayout
                                    android:id="@+id/actionBarContent"
                                    android:layout_width="match_parent"
                                    android:layout_height="35dp"
                                    android:layout_alignParentBottom="true"
                                    android:layoutDirection="rtl"
                                    android:orientation="horizontal"
                                    android:weightSum="1000">

                                    <View
                                        android:layout_width="1dp"
                                        android:layout_height="wrap_content"
                                        android:background="@color/white" />

                                    <com.chinalwb.are.styles.toolbar.ARE_ToolbarDefault
                                        android:id="@+id/areToolbar"
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight="1000"
                                        android:background="@color/white"
                                        android:gravity="center_vertical"
                                        android:padding="2dp" />
                                </LinearLayout>
                            </androidx.cardview.widget.CardView>

                            <ScrollView
                                android:layout_width="match_parent"
                                android:layout_height="150dp"
                                android:layout_marginLeft="2dp"
                                android:layout_marginRight="2dp"
                                android:layout_marginBottom="7dp">

                                <com.chinalwb.are.AREditText
                                    android:id="@+id/arEditText"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="2dp"
                                    android:layout_marginRight="2dp"
                                    android:background="@color/lightBlack"
                                    android:fontFamily="@font/vazir"
                                    android:gravity="top|start"
                                    android:hint="@string/enterText"
                                    android:layoutDirection="rtl"
                                    android:textColor="@color/white"
                                    android:textColorHint="@color/white"
                                    android:textSize="15sp" />
                            </ScrollView>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:layout_below="@id/contentBlock"
                android:layout_centerHorizontal="true"
                android:text="@string/nextStep"
                android:fontFamily="@font/vazir"
                android:textSize="@dimen/buttonSize"
                android:background="@drawable/style_button"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </FrameLayout>
</layout>
